Testing with one line is tested and Optimised the classification

--- a/views/error.html
+++ b/views/error.html
@@ -10,11 +10,12 @@
         <style type="text/css"></style>
     </head>
     <body>
-        <h4>Oops, so embarrassing.</h4>
+        
         <img
         src="https://valleyadvocate.com/wp-content/uploads/2017/07/ThinkstockPhotos-599486444.jpg"
         alt="Error Robot"
-        width="50%">
+        width="30%">
+        <h2>Oops, So embarrassing.</h2>
         <p><%= errorMessage %></p>
         <script type="text/javascript"></script>
     </body>
